--- a/dark-green/manifest.json
+++ b/dark-green/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Dark green",
-    "version": "2.0",
+    "name": "Dark Green",
+    "version": "2.1",
     "description": "Deep organic nature theme",
     "manifest_version": 3,
     "theme": {
